2006-08-23  Matthew Barnes  <mbarnes@redhat.com>
  	 
	* gui/e-itip-control.c:
	fix an uninitialized GError - fixes bug 352423.

2006-02-14  Rajeev ramanathan <rajeevramanathan_2004@yahoo.co.in>

	**Fixes #325935

	* gui/memos-component.c: (selector_tree_drag_motion):
	Edited code to move the memo from one task list to another.

2006-08-22  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #351263
	* gui/dialogs/event-page.c: (init_widgets):
	do not add  duplicate items in menu.

	Committing the patch from Sebastien Bacher <seb123@debian.org> 

2006-08-22  Kjartan Maraas  <kmaraas@gnome.org>

	* gui/calendar-component.c (ensure_sources): Plug a leak.
	* gui/migration.c (create_calendar_sources): Same thing here.

2006-08-21  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #346549
	* gui/dialogs/task-details-page.c (priority_index_to_value):
	set the priority to undefined if its value does not match the cases.
	Removed the assertion so that we don't quit.

2006-08-21  Srinivasa Ragavan  <sragavan@novell.com>

	* gui/cal-search-bar.c: (string_without_underscores),
	(generate_viewoption_menu), (make_suboptions): Fixes few search
	issues.

2006-08-18  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #343369
	* gui/itip-utils.c: (append_cal_attachments):
	Set the file name to empty string in its absence.

2006-08-17  Kjartan Maraas  <kmaraas@gnome.org>

	* gui/e-week-view-event-item.c:
	(e_week_view_event_item_draw_icons): Plug a leak.

2006-08-14  Li Yuan  <li.yuan@sun.com>

	* gui/alarm-notify/alarm-queue.c: (mail_notification):
	Fixes #351253, make the dialog shows the label and 
	can be closed.

2006-08-10  Chenthill Palanisamy  <pchenthill@novell.com>

	* gui/e-cal-model-calendar.c: (ecmc_set_value_at):
	* gui/e-calendar-table.c: (e_calendar_table_on_forward):
	* gui/e-calendar-view.c: (e_calendar_view_add_event),
	(e_calendar_view_cut_clipboard), (delete_event),
	(e_calendar_view_delete_selected_occurrence), (on_forward),